test/corpus/L1/negative/unterminated-comment.st
"---
kind: negative
section: error.unterminated-comment
codes: E_UNTERMINATED_COMMENT
---"
"abc
